--- a/css/style.css
+++ b/css/style.css
@@ -67,17 +67,8 @@ h5 { font-size: 16px; font-weight: 600; }
 h6 { font-size: 14px; font-weight: 600; }
 
 /* Background overlay */
-.modal {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 9999;
+.modal{
+  display: none;   /* add this */
 }
 
 /* Popup box */
